# taxi_demand_predictor

./: README.md  pyproject.toml
.github/: feature_pipeline.yml
.github/workflows/: feature_pipeline.yml  inference_pipeline.yml  training_pipeline.yml
.streamlit/: config.toml
taxi_demand_predictor/: pyproject.toml
taxi_demand_predictor/data/transformed/: ts_data_2022-01.parquet
taxi_demand_predictor/models/: model.pkl
taxi_demand_predictor/notebooks/: 01_load_and_validate_raw_data.Ipynb  02_transform_data_to_ts_data.ipynb  03._transform_ts_data_into_features_and_target.ipynb  04_transform_raw_data_into_features_and_target.ipynb  05_visualize_training_data.ipynb  06_baseline_model.ipynb  07_xgboost_model.ipynb  08_lightgbm_model.ipynb  09_lightgbm_model_with_feature_engineering.ipynb  10_lightgbm_model_with_hyperparameter_tuning.ipynb  11_backfill_feature_store.ipynb  12_feature_pipeline.ipynb  13_model_training_pipeline.ipynb  14_inference_pipeline.ipynb  model_training_pipeline.ipynb
taxi_demand_predictor/src/: config.py  data.py  feature_store_api.py  feature_store_config.py  frontend.py  frontend_monitoring.py  frontend_simpler.py  inference.py  logger.py  monitoring.py  personal_test.py  plot.py
