[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Ramane23 <contactsouley@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
jupyter = "^1.0.0"
ipykernel = "^6.29.5"
pandas = "<2.2.0"
tqdm = "^4.66.4"
xgboost = "^2.1.0"
pyarrow = "^16.1.0"
lightgbm = "^4.4.0"
scikit-learn = "^1.5.1"
plotly = "^5.22.0"
optuna = "^3.6.1"
python-dotenv = "^1.0.1"
hopsworks = "^3.7.0"
streamlit = "^1.36.0"
geopandas = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
